# Tiny-HardwareInterface

./: .gitignore  CMakeLists.txt  HardwareInterfaceUnit.c  HardwareInterfaceUnit.h  MasterImmitationCfg.h  PortsBusMessages.h  README.md  SimpleTimerWP.c  SimpleTimerWP.h  SlaveImmitationCfg.h  Tiny_HardwareInterface_version.h  mainXC8.c  mainXC8_RecvContinious.c  mainXC8_RecvConts.c  type_def.h  usart.c  usart.h  vssimulationport.h
